--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ keywords = ["attrs", "serialization", "dict", "data", "nested", "functional"]
 python = "*"
 toolz = "^0.9.0"
 cytoolz = "^0.9.0"
-attrs = "^20.1.0"
+attrs = "*"
 
 [tool.poetry.dev-dependencies]
 boltons = "^18.0"
